--- a/Day 3/layout.html
+++ b/Day 3/layout.html
@@ -9,6 +9,7 @@
 
     <header> 
         <nav> 
+            <a href="https://www.mindrisers.com.np/courses">our courses</a>
         </nav> 
     </header>
 
@@ -17,7 +18,7 @@
     </main>
 
     <footer>
-        
+
     </footer>
 
     
